PLUGINWIZARD-76 : FO: migration Bootstrap v.3
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@64252 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/errors_handler.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/errors_handler.html
@@ -4,7 +4,7 @@
 <div class="alert alert-danger">
     <a class="close" data-dismiss="alert" href="#">x</a>
     <#list errors as error >
-    <i class="icon-exclamation-sign"></i> ${error.message} <br>
+    <i class="glyphicon glyphicon-exclamation-sign"></i> ${error.message} <br>
     </#list>
 </div>
 </#if>
