--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/infos_handler.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/infos_handler.html
@@ -4,7 +4,7 @@
 <div class="alert alert-info">
     <a class="close" data-dismiss="alert" href="#">x</a>
     <#list infos as info >
-    <i class="icon-info-sign"></i> ${info.message} <br>
+    <i class="glyphicon glyphicon-info-sign"></i> ${info.message} <br>
     </#list>
 </div>
 </#if>
