--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_admin_features.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_admin_features.html
@@ -3,14 +3,14 @@
 
 <div class="row">    
 
-    <div class="span3">       
+    <div class="col-md-3">       
         <@sidebar step="administration" />
         <div class="well">      
             #i18n{pluginwizard.pluginwizard_manage_plugin_admin_features.pageHelp}
         </div>
     </div>
 
-    <div class="span8">
+    <div class="col-md-9">
         <#include "infos_handler.html" />
 
         <h4>#i18n{pluginwizard.pluginwizard_manage_plugin_admin_features.pageTitle}</h4>                 
@@ -20,7 +20,7 @@
                 <input type="hidden" name="page" value="pluginwizard" /> 
                 <input type="hidden" name="view" value="createAdminFeature" /> 
                 <button type="submit" class="btn btn-primary">
-                    <i class="icon-plus icon-white"></i>
+                    <i class="glyphicon glyphicon-plus"></i>
                     #i18n{pluginwizard.pluginwizard_manage_plugin_admin_features.buttonAddFeature}
                 </button>                
             </form>
@@ -44,11 +44,11 @@
                     <td>
                         <a href="jsp/site/Portal.jsp?page=pluginwizard&view=modifyAdminFeature&feature_id=${feature.id}" 
                            class="btn btn-primary btn-small" title="#i18n{pluginwizard.pluginwizard_manage_plugin_admin_features.buttonModifyFeature}">
-                            <i class="icon-edit icon-white"></i>
+                            <i class="glyphicon glyphicon-edit"></i>
                         </a>
                         <a href="jsp/site/Portal.jsp?page=pluginwizard&action=confirmRemoveAdminFeature&feature_id=${feature.id}" 
                            class="btn btn-danger btn-small" title="#i18n{pluginwizard.pluginwizard_manage_plugin_admin_features.buttonRemoveFeature}">
-                            <i class="icon-trash icon-white"></i>
+                            <i class="glyphicon glyphicon-trash"></i>
                         </a>
 
                     </td>
@@ -58,16 +58,16 @@
             </tbody>
         </table>
 
-        <div class="form-actions">      
+        <div class="form-group">      
             <form class="default-form" method="post" action="jsp/site/Portal.jsp">
                 <input type="hidden" name="page" value="pluginwizard" /> 
                 <button type="submit" name="view_manageBusinessClasses" class="btn btn-primary">
-                    <i class="icon-chevron-left icon-white"></i>
+                    <i class="glyphicon glyphicon-chevron-left"></i>
                     #i18n{pluginwizard.pluginwizard_manage_plugin_admin_features.buttonBack}
                 </button>                        
                 <button type="submit" name="view_manageApplications" class="btn btn-primary">
                     #i18n{pluginwizard.pluginwizard_manage_plugin_admin_features.buttonNext}
-                    <i class="icon-chevron-right icon-white"></i>
+                    <i class="glyphicon glyphicon-chevron-right"></i>
                 </button>  
         </div>   
         </form>
