--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/message_exists.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/message_exists.html
@@ -1,6 +1,4 @@
 <div class="row">   
-    <div class="modal" style="top: 400px">
-        <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title">#i18n{pluginwizard.pluginwizard_plugin_exists.pageTitle}</h4>
@@ -13,18 +11,16 @@
                     <form class="form form-horizontal" method="post" action="jsp/site/Portal.jsp" >    
                         <input type="hidden" name="page" value="pluginwizard" />                
                         <button class="btn btn-danger" type="submit" name="action_resetData">
-                            <i class="icon-trash icon-white"></i>
+                            <i class="glyphicon glyphicon-trash"></i>
                             #i18n{pluginwizard.pluginwizard_plugin_exists.buttonReset}
                         </button>
                         <button class="btn btn-primary" type="submit" name="view_modifyDescription">
-                            <i class="icon-chevron-right icon-white"></i>
+                            <i class="glyphicon glyphicon-chevron-right"></i>
                             #i18n{pluginwizard.pluginwizard_plugin_exists.buttonPreserve}
                         </button>
                     </form>
                 </div>
             </div>
-        </div>
-    </div>
 </div>
 <br>
 <br>
