--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_attribute.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_attribute.html
@@ -1,8 +1,8 @@
 <#include "sidebar.html" />   
 
-<div class="row">
+<!-- <div class="row"> -->
 
-    <div class="span3">             
+    <div class="col-md-3">             
         <@sidebar step="model" />
         <div class="well">         
             #i18n{pluginwizard.pluginwizard_create_attribute.pageHelp}   
@@ -10,8 +10,8 @@
     </div>
 
 
-    <div class="span8">
-        <form class="form-horizontal" method="post" action="jsp/site/Portal.jsp" >  
+    <div class="col-md-9">
+        <form class="form-horizontal" role="form" method="post" action="jsp/site/Portal.jsp" >  
             <fieldset>
                 <legend>#i18n{pluginwizard.pluginwizard_create_attribute.pageTitle}</legend>
                 <input type="hidden" name="page" value="pluginwizard" />        
@@ -19,50 +19,52 @@
 
                  <#include "errors_handler.html" />
 
-                <div class="control-group">
-                    <label class="control-label">#i18n{pluginwizard.pluginwizard_create_attribute.labelAttributeName} * :</label>      
-                    <div class="controls">    
-                        <input type="text" name="attribute_name" value="${attribute.attributeName!}" size="30" />      
+                <div class="form-group">
+                    <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_attribute.labelAttributeName} * :</label>      
+                    <div class="col-md-9">    
+                        <input type="text" class="form-control input-md" name="attribute_name" value="${attribute.attributeName!}" size="30" />      
                     </div>
                 </div>
 
-                <div class="control-group">
-                    <label class="control-label">#i18n{pluginwizard.pluginwizard_create_attribute.labelAttributeType} * :</label>      
-                    <div class="controls">       
-                        <@combo name="attribute_type_id" default_value="${attribute.attributeTypeId!'1'}" items=combo_attribute_type />      
+                <div class="form-group">
+                    <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_attribute.labelAttributeType} * :</label>      
+                    <div class="col-md-9">       
+                        <@comboWithParams name="attribute_type_id" default_value="${attribute.attributeTypeId!'1'}" additionalParameters="class=\"form-control input-md\"" items=combo_attribute_type />      
                     </div> 
                 </div>
 
-                <div class="control-group">
-                    <label class="control-label">#i18n{pluginwizard.pluginwizard_create_attribute.labelMandatory} * : </label>                            
-                    <div class="controls">  
+                <div class="form-group">
+                    <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_attribute.labelMandatory} * : </label>                            
+                    <div class="col-md-9"> 
                         <input class="checkbox" type="checkbox" name="not_null" value="1" <#if attribute?? && attribute.notNull>checked="checked"</#if>/>
                     </div>  
                 </div>
 
-                <div class="control-group">
-                    <label class="control-label">#i18n{pluginwizard.pluginwizard_create_attribute.labelAttributeKey} * : </label>                            
-                    <div class="controls">  
+                <div class="form-group">
+                    <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_attribute.labelAttributeKey} * : </label>                            
+                    <div class="col-md-9">  
                         <input class="checkbox" type="checkbox" name="is_primary" <#if attribute?? && attribute.isPrimary>checked="checked"</#if>/>
                     </div>  
                 </div>
 
-                <div class="control-group">
-                    <label class="control-label">#i18n{pluginwizard.pluginwizard_create_attribute.labelClassDescription} * : </label>                            
-                    <div class="controls">                                                                                                     
+                <div class="form-group">
+                    <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_attribute.labelClassDescription} * : </label>                            
+                    <div class="col-md-9">                                                                                                     
                         <input class="checkbox" type="checkbox" name="is_description" <#if attribute?? && attribute.isDescription>checked="checked"</#if> />
                     </div>                         
                 </div>
 
-                <div class="form-actions">                                          
+                <div class="form-group">                                          
+				<div class="col-md-offset-3 col-md-9">
                     <button type="submit" name="action_createAttribute" class="btn btn-primary">
                         #i18n{pluginwizard.pluginwizard_create_attribute.buttonCreateAttribute}
                     </button>                    
-                    <button type="submit" name="view_modifyBusinessClass" class="btn">
+                    <button type="submit" name="view_modifyBusinessClass" class="btn btn-default">
                         #i18n{pluginwizard.pluginwizard_create_attribute.buttonBack}
-                    </button>                                                             
+                    </button>  
+				</div>					
                 </div>    
             </fieldset>
         </form>        
     </div>    
-</div>
+<!-- </div> -->
