--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_plugin_description.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_plugin_description.html
@@ -1,16 +1,16 @@
 <#include "sidebar.html" />   
 
-<div class="row-fluid"> 
+<div class="row"> 
 
-    <div class="span3">       
+    <div class="col-md-3">       
         <@sidebar step="description" />
         <div class="well">
             #i18n{pluginwizard.pluginwizard_create_plugin_description.pageHelp}
         </div>
     </div>
 
-    <div class="span8">
-        <form class="form form-horizontal well" method="post" action="jsp/site/Portal.jsp" >    
+    <div class="col-md-9">
+        <form class="form-horizontal" method="post" action="jsp/site/Portal.jsp" >    
             <input type="hidden" name="id_plugin" value="${plugin_id}" />
             <fieldset>
                 <h4>#i18n{pluginwizard.pluginwizard_create_plugin_description.pageTitle}</h4>                 
@@ -19,55 +19,55 @@
 
                 <#include "errors_handler.html" />
 
-                <div class="control-group">
-                    <label class="control-label">                         	            	                        
+                <div class="form-group">
+                    <label class="col-md-3 control-label">                         	            	                        
                         #i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginName} :
                     </label>       
-                    <div class="controls">                
-                        <input type="text" name="plugin_name"  value="${plugin_model.pluginName!''}" readonly />       
+                    <div class="col-md-9">                
+                         <input class="form-control input-md" type="text" name="plugin_name" value="${plugin_model.pluginName!''}" readonly />       
                     </div>
                 </div>
 
 
-                <div class="control-group">
-                    <label class="control-label" >#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginDescription} : </label>
-                    <div class="controls">
-                        <input class="input-xlarge" type="text" name="plugin_description" value="" />
+                <div class="form-group">
+                    <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginDescription} : </label>
+                    <div class="col-md-9">
+                         <input class="form-control input-md" type="text" name="plugin_description" value="" />
                     </div>
                 </div>
 
-                <div class="control-group">
-                    <label class="control-label" >#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginProvider} : </label>
-                    <div class="controls">
-                        <input class="input-xlarge" type="text" name="plugin_provider" value="" />
+                <div class="form-group">
+                    <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginProvider} : </label>
+                    <div class="col-md-9">
+                         <input class="form-control input-md" type="text" name="plugin_provider" value="" />
                     </div>
                 </div>
 
-                <div class="control-group">
-                    <label class="control-label" >#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginVersion} : </label>       
-                    <div class="controls">
-                        <input class="input-small" type="text" name="plugin_version"  value="${plugin_version_number}" />
+                <div class="form-group">
+                    <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginVersion} : </label>       
+                    <div class="col-md-9">
+                         <input class="form-control input-md" type="text" name="plugin_version"  value="${plugin_version_number}" />
                     </div>                                                                              
                 </div>
 
-                <div class="control-group">
-                    <label class="control-label" >#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginCopyright} : </label>       
-                    <div class="controls">
-                        <input class="input-xlarge" type="text" name="plugin_copyright" value="Copyright (c) 2013 Your Company" />
+                <div class="form-group">
+                    <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginCopyright} : </label>       
+                    <div class="col-md-9">
+                         <input class="form-control input-md" type="text" name="plugin_copyright" value="Copyright (c) 2013 Your Company" />
                     </div>  
                 </div>
 
-                <div class="control-group">
-                    <label class="control-label" >#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginProviderUrl} :</label>       
-                    <div class="controls">
-                        <input class="input-xlarge" type="text" name="plugin_provider_url"  value="http://your.web.site.com"  /> 
+                <div class="form-group">
+                    <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginProviderUrl} :</label>       
+                    <div class="col-md-9">
+                         <input class="form-control input-md" type="text" name="plugin_provider_url"  value="http://your.web.site.com"  /> 
                     </div>              
                 </div>
 
-                <div class="control-group">
-                    <label class="control-label" >#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPlugindbPoolRequired} :</label>            
-                    <div class="controls">
-                        <select class="input-small" name="plugin_db_pool_required">    				
+                <div class="form-group">
+                    <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPlugindbPoolRequired} :</label>            
+                    <div class="col-md-9">
+                        <select class="form-control input-md" name="plugin_db_pool_required">    				
                             <option value="1">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelTrue}
                             </option>    				
                             <option value="0">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelFalse}
@@ -76,15 +76,17 @@
                     </div>                   	
                 </div>                                                                                   
 
-                <div class="form-actions">                                              
+                <div class="form-group">
+					<div class="col-md-offset-3 col-md-9">
                     <button type="submit" name="action_descriptionPrevious" class="btn btn-primary">
-                        <i class="icon-chevron-left icon-white"></i>
+                        <i class="glyphicon glyphicon-chevron-left"></i>
                         #i18n{pluginwizard.pluginwizard_create_plugin_description.buttonBack}
                     </button>                        
                     <button type="submit" name="action_descriptionNext" class="btn btn-primary">
                         #i18n{pluginwizard.pluginwizard_create_plugin_description.buttonNext}
-                        <i class="icon-chevron-right icon-white"></i>
-                    </button>                  
+                        <i class="glyphicon glyphicon-chevron-right"></i>
+                    </button>
+					</div>
                 </div>                                              		
 
             </fieldset>
