--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_portlet.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_portlet.html
@@ -2,16 +2,16 @@
 
 <div class="row">
 
-    <div class="span3">             
+    <div class="col-md-3">             
         <@sidebar step="portlet" />
         <div class="well">         
             #i18n{pluginwizard.pluginwizard_create_portlet.pageHelp} 
         </div>  
     </div>
 
-    <div class="span8">
+    <div class="col-md-9">
 
-        <form class="form form-horizontal" method="post" action="jsp/site/Portal.jsp" >
+        <form class="form-horizontal" method="post" action="jsp/site/Portal.jsp" >
             <fieldset>
                 <legend>#i18n{pluginwizard.pluginwizard_create_portlet.pageTitle}</legend>
 
@@ -19,32 +19,33 @@
 
                  <#include "errors_handler.html" />
 
-                 <div class="control-group">
-                    <label class="control-label">#i18n{pluginwizard.pluginwizard_create_portlet.labelPortletClass} :</label>
-                    <div class="controls">   
-                        <input class="input-xlarge" type="text" name="portlet_class" value="<#if portlet.portletClass??>${portlet.portletClass}<#else>${plugin_model.pluginName?cap_first}Portlet</#if>" />
+                 <div class="form-group">
+                    <label class="control-label col-md-3">#i18n{pluginwizard.pluginwizard_create_portlet.labelPortletClass} :</label>
+                    <div class="col-md-9">   
+                         <input class="form-control input-md" type="text" name="portlet_class" value="<#if portlet.portletClass??>${portlet.portletClass}<#else>${plugin_model.pluginName?cap_first}Portlet</#if>" />
                     </div>  
                 </div>
 
-                <div class="control-group">
-                    <label class="control-label">#i18n{pluginwizard.pluginwizard_create_portlet.labelPortletTypeName} :</label>
-                    <div class="controls"> 
-                        <input class="input-xlarge" type="text" name="portlet_type_name" value="<#if portlet.portletTypeName??>${portlet.portletTypeName}<#else>${plugin_model.pluginName?upper_case}_PORTLET</#if>" />
+                <div class="form-group">
+                    <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_portlet.labelPortletTypeName} :</label>
+                    <div class="col-md-9"> 
+                         <input class="form-control input-md" type="text" name="portlet_type_name" value="<#if portlet.portletTypeName??>${portlet.portletTypeName}<#else>${plugin_model.pluginName?upper_case}_PORTLET</#if>" />
                     </div>  
                 </div>
 
-                <div class="control-group">
-                    <label class="control-label">#i18n{pluginwizard.pluginwizard_create_portlet.labelJspBaseName} :</label>
-                    <div class="controls"> 
-                        <input class="input-xlarge" type="text" name="jsp_base_name" value="<#if portlet.jspBaseName??>${portlet.jspBaseName}<#else>Portlet${plugin_model.pluginName?cap_first}</#if>" />
+                <div class="form-group">
+                    <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_portlet.labelJspBaseName} :</label>
+                    <div class="col-md-9"> 
+                         <input class="form-control input-md" type="text" name="jsp_base_name" value="<#if portlet.jspBaseName??>${portlet.jspBaseName}<#else>Portlet${plugin_model.pluginName?cap_first}</#if>" />
                     </div>  
                 </div>
 
 
-                <div class="form-actions">                                          
-                    <button type="submit" name="action_createPortlet" class="btn btn-primary">#i18n{pluginwizard.pluginwizard_create_portlet.buttonCreatePortlet}</button>                   
-                    <button type="submit" name="view_managePortlets" class="btn">#i18n{pluginwizard.pluginwizard_create_portlet.buttonBack}</button>                                                             
-                </div> 
+                <div class="form-group">
+					<div class="col-md-offset-3 col-md-9">
+                    <button type="submit" name="action_createPortlet" class="btn btn-primary">#i18n{pluginwizard.pluginwizard_create_portlet.buttonCreatePortlet}</button>    
+                    <button type="submit" name="view_managePortlets" class="btn">#i18n{pluginwizard.pluginwizard_create_portlet.buttonBack}</button></div>
+					</div> 
             </fieldset>
         </form>
     </div>    
