--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_applications.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_applications.html
@@ -2,14 +2,14 @@
 
 <div class="row">
 
-    <div class="span3">             
+    <div class="col-md-3">             
         <@sidebar step="xpage" />
         <div class="well">         
             #i18n{pluginwizard.pluginwizard_manage_plugin_applications.pageHelp}   
         </div>  
     </div>
 
-    <div class="span8">
+    <div class="col-md-9">
         <#include "infos_handler.html" />
 
         <h4>#i18n{pluginwizard.pluginwizard_manage_plugin_applications.pageTitle} </h4>                 
@@ -19,7 +19,7 @@
                 <input type="hidden" name="page" value="pluginwizard" />
                 <input type="hidden" name="view" value="createApplication" /> 
                 <button type="submit" class="btn btn-primary">
-                    <i class="icon-plus icon-white"></i>
+                    <i class="glyphicon glyphicon-plus"></i>
                     #i18n{pluginwizard.pluginwizard_manage_plugin_applications.buttonAddApplication}
                 </button>
             </form>
@@ -46,12 +46,12 @@
 
                         <a class="btn btn-primary btn-small" href="jsp/site/Portal.jsp?page=pluginwizard&view=modifyApplication&application_id=${plugin_application.id}" 
                            title="#i18n{pluginwizard.pluginwizard_manage_plugin_applications.buttonModifyApplication}" >
-                            <i class="icon-edit icon-white"></i>
+                            <i class="glyphicon glyphicon-edit"></i>
                         </a>
 
                         <a class="btn btn-danger btn-small" href="jsp/site/Portal.jsp?page=pluginwizard&action=confirmRemoveApplication&application_id=${plugin_application.id}" 
                            title="#i18n{pluginwizard.pluginwizard_manage_plugin_applications.buttonRemoveApplication}" >
-                            <i class="icon-trash icon-white"></i>
+                            <i class="glyphicon glyphicon-trash"></i>
                         </a>
                     </td>
                     </#list>
@@ -62,17 +62,17 @@
 
         </table>
 
-        <div class="form-actions"> 
+        <div class="form-group"> 
             <form class="default-form" method="post" action="jsp/site/Portal.jsp">
                 <input type="hidden" name="page" value="pluginwizard" /> 
 
                 <button type="submit" name="view_manageAdminFeatures" class="btn btn-primary">
-                    <i class="icon-chevron-left icon-white"></i>
+                    <i class="glyphicon glyphicon-chevron-left"></i>
                     #i18n{pluginwizard.pluginwizard_manage_plugin_applications.buttonBack}
                 </button>
                 <button type="submit" name="view_managePortlets" class="btn btn-primary">
                     #i18n{pluginwizard.pluginwizard_manage_plugin_applications.buttonNext}
-                    <i class="icon-chevron-right icon-white"></i>
+                    <i class="glyphicon glyphicon-chevron-right"></i>
                 </button>
             </form>
         </div>
