--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_portlets.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_portlets.html
@@ -2,14 +2,14 @@
 
 <div class="row">
 
-    <div class="span3">             
+    <div class="col-md-3">             
         <@sidebar step="portlet" />
         <div class="well">         
             #i18n{pluginwizard.pluginwizard_manage_portlets.pageHelp}
         </div>  
     </div>
 
-    <div class="span8">
+    <div class="col-md-9">
 
         <#include "infos_handler.html" />
 
@@ -20,7 +20,7 @@
                 <input type="hidden" name="page" value="pluginwizard" />
                 <input type="hidden" name="view" value="createPortlet" /> 
                 <button type="submit" class="btn btn-primary">
-                    <i class="icon-plus icon-white"></i>
+                    <i class="glyphicon glyphicon-plus"></i>
                     #i18n{pluginwizard.pluginwizard_manage_portlets.buttonAddPortlet}
                 </button>
             </form>
@@ -50,11 +50,11 @@
                     <td>
                         <a class="btn btn-primary btn-small" href="jsp/site/Portal.jsp?page=pluginwizard&view=modifyPortlet&portletId=${portlet.id}" 
                            title="#i18n{pluginwizard.pluginwizard_manage_plugin_admin_features.buttonModifyFeature}" >
-                            <i class="icon-edit icon-white"></i>
+                            <i class="glyphicon glyphicon-edit"></i>
                         </a>
                         <a class="btn btn-danger btn-small" href="jsp/site/Portal.jsp?page=pluginwizard&action=confirmRemovePortlet&portletId=${portlet.id}" 
                            title="#i18n{pluginwizard.pluginwizard_manage_plugin_admin_features.buttonRemoveFeature}" >
-                            <i class="icon-trash icon-white"></i>
+                            <i class="glyphicon glyphicon-trash"></i>
                         </a>
                     </td>
                     </#list> 
@@ -63,17 +63,17 @@
             </tbody>
         </table>
 
-        <div class="form-actions"> 
+        <div class="form-group"> 
             <form class="default-form" method="post" action="jsp/site/Portal.jsp">
                 <input type="hidden" name="page" value="pluginwizard" />
 
                 <button type="submit" name="view_manageApplications" class="btn btn-primary">
-                    <i class="icon-chevron-left icon-white"></i>
+                    <i class="glyphicon glyphicon-chevron-left"></i>
                     #i18n{pluginwizard.pluginwizard_manage_portlets.buttonBack}
                 </button>
                 <button type="submit" name="view_recapitulate" class="btn btn-primary">
                     #i18n{pluginwizard.pluginwizard_manage_portlets.buttonNext}
-                    <i class="icon-chevron-right icon-white"></i>
+                    <i class="glyphicon glyphicon-chevron-right"></i>
                 </button>
             </form>
         </div>
