--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_admin_feature.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_admin_feature.html
@@ -2,16 +2,16 @@
 
 <div class="row">
 
-    <div class="span3">             
+    <div class="col-md-3">             
         <@sidebar step="administration" />
         <div class="well">         
             #i18n{pluginwizard.pluginwizard_modify_admin_feature.pageHelp}     
         </div>  
     </div>
 
-    <div class="span8">
+    <div class="col-md-9">
 
-        <form class="form form-horizontal" method="post" action="jsp/site/Portal.jsp"> 
+        <form class="form-horizontal" method="post" action="jsp/site/Portal.jsp"> 
             <fieldset>
                 <legend>#i18n{pluginwizard.pluginwizard_modify_admin_feature.pageTitle}</legend>
 
@@ -20,39 +20,39 @@
 
                  <#include "errors_handler.html" />
 
-                 <div class="control-group">
-                    <label class="control-label">#i18n{pluginwizard.pluginwizard_modify_admin_feature.labelFeatureTitle} : </label>                           
-                    <div class="controls">                                                                                               
-                        <input class="input-xlarge" type="text" name="feature_title" value="${feature.featureTitle}" />                                                                      
+                 <div class="form-group">
+                    <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_modify_admin_feature.labelFeatureTitle} : </label>                           
+                    <div class="col-md-9">                                                                                               
+                         <input class="form-control input-md" type="text" name="feature_title" value="${feature.featureTitle}" />                                                                      
                     </div>                                                                                                         
                 </div>
 
-                <div class="control-group">
-                    <label class="control-label">#i18n{pluginwizard.pluginwizard_modify_admin_feature.labelFeatureDescription} : </label>                        
-                    <div class="controls">                                                                                       
-                        <input class="input-xlarge" type="text" name="feature_description" value="${feature.featureDescription}" />                               
+                <div class="form-group">
+                    <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_modify_admin_feature.labelFeatureDescription} : </label>                        
+                    <div class="col-md-9">                                                                                       
+                         <input class="form-control input-md" type="text" name="feature_description" value="${feature.featureDescription}" />                               
                     </div>    
                 </div>
 
-                <div class="control-group">
-                    <label class="control-label">#i18n{pluginwizard.pluginwizard_modify_admin_feature.labelFeatureName} :                            
+                <div class="form-group">
+                    <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_modify_admin_feature.labelFeatureName} :                            
                     </label>                               
-                    <div class="controls">                                                              	                              
-                        <input class="input-xlarge" type="text" name="feature_name" value="${feature.featureName}" /> 				                                                                        
-                    </div>                                                                                                                                                                      	  				                     
+                    <div class="col-md-9">                                                              	                              
+                         <input class="form-control input-md" type="text" name="feature_name" value="${feature.featureName}" /> 				                                                                        
+                    </div>         	  				                     
                 </div>   
 
-                <div class="control-group">
-                    <label class="control-label">#i18n{pluginwizard.pluginwizard_modify_admin_feature.labelFeatureManagement} : </label>                     
-                    <div class="controls">               
-                        <input type="text" name="feature_right" value="${feature.featureRight}" />                                 
+                <div class="form-group">
+                    <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_modify_admin_feature.labelFeatureManagement} : </label>                     
+                    <div class="col-md-9">               
+                        <input class="form-control input-md" type="text" name="feature_right" value="${feature.featureRight}" />                                 
                     </div> 
                 </div>
 
-                <div class="control-group">
-                    <label class="control-label">#i18n{pluginwizard.pluginwizard_modify_admin_feature.labelFeatureLevel} : </label>                            
-                    <div class="controls">                                                                                                     
-                        <select class="input-xlarge" name="feature_level">    				                              
+                <div class="form-group">
+                    <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_modify_admin_feature.labelFeatureLevel} : </label>                            
+                    <div class="col-md-9">                                                                                                     
+                        <select class="form-control input-md" name="feature_level">    				                              
                             <option value="0" <#if feature.featureLevel ="0">selected="selected" </#if> >
                                     #i18n{pluginwizard.pluginwizard_modify_admin_feature.labelLevel0}                              
                                 </option> 
@@ -72,9 +72,9 @@
                     </div>         
                 </div>
                  
-                <div class="control-group">
-                    <label class="control-label" >#i18n{pluginwizard.pluginwizard_modify_admin_feature.labelBusinessClass} :  </label>        
-                    <div class="controls">
+                <div class="checkbox">
+                    <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_modify_admin_feature.labelBusinessClass} :  </label>        
+                    <div class="col-md-9"> 
                         <#list combo_business_classes?sort_by('name') as business>
                             <#if feature.getIdBusinessClasses()?seq_contains(business.code?number)>
                                 <input type='checkbox' checked='checked' name='id_business_class${business.code}' value='${business.code}'/> &nbsp; ${business.name}<br />
@@ -95,9 +95,10 @@
                     </div>  
                 </div>
 
-                <div class="form-actions">                                                                    
+                <div class="form-group">
+				<div class="col-md-offset-3 col-md-9">
                     <button type="submit" name="action_modifyAdminFeature" class="btn btn-primary">#i18n{pluginwizard.pluginwizard_modify_admin_feature.modify_feature_button}</button>                                            
-                    <button type="submit" name="view_manageAdminFeatures" class="btn">#i18n{pluginwizard.pluginwizard_modify_admin_feature.buttonBack}</button>                                    
+                    <button type="submit" name="view_manageAdminFeatures" class="btn btn-default">#i18n{pluginwizard.pluginwizard_modify_admin_feature.buttonBack}</button></div>                                    
                 </div>  
             </fieldset>
 
