--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_plugin.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_plugin.html
@@ -1,32 +1,31 @@
 <#include "sidebar.html" />   
 
 <div class="row">
-    <div class="span3" > 
+    <div class="col-md-3" > 
         <@sidebar step="creation" />
-        <div class="help-block">#i18n{pluginwizard.pluginwizard_modify_plugin.pageHelp}</div>
+        <div class="well">#i18n{pluginwizard.pluginwizard_modify_plugin.pageHelp}</div>
     </div>
 
-    <div class="span8">
+    <div class="col-md-9">
         <#include "infos_handler.html" />
-        <form class="form-horizontal" method="post" action="jsp/site/Portal.jsp" >
+        <form class="form-horizontal" role="form" method="post" action="jsp/site/Portal.jsp">
             <fieldset>
                 <legend>#i18n{pluginwizard.pluginwizard_modify_plugin.pageTitle}</legend>
-
                  <#include "infos_handler.html" />
                  <#include "errors_handler.html" />
 
                 <input type="hidden" name="page" value="pluginwizard" />
                 <input type="hidden" name="action" value="do_create_plugin" />
 
-                <div class="control-group">
-                    <label class="control-label">#i18n{pluginwizard.pluginwizard_modify_plugin.labelPluginName} :</label>
-                    <div class="controls">
-                        <input type="text" name="plugin_name"  size="30" value="<#if plugin_model.pluginName??>${plugin_model.pluginName}</#if>" size="30" />
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">#i18n{pluginwizard.pluginwizard_modify_plugin.labelPluginName} :</label>
+                    <div class="col-sm-9">
+                        <input class="form-control input-md" type="text" name="plugin_name" value="<#if plugin_model.pluginName??>${plugin_model.pluginName}</#if>" size="30" />
                     </div>
                 </div>           
 
-                <div class="control-group">
-                    <div class="controls">
+                <div class="">
+                    <div>
                         <h5>#i18n{pluginwizard.pluginwizard_modify_plugin.labelSummary} :</h5>
                         <ul>
                             <li>#i18n{pluginwizard.pluginwizard_modify_plugin.labelAddBusinessClasses}</li>             
@@ -44,7 +43,7 @@
                     </div>
                 </div>  
 
-                <div class="form-actions"> 
+                <div class=""> 
                     <input type="submit" name="do_create_plugin" class="btn btn-primary" value="#i18n{pluginwizard.pluginwizard_modify_plugin.buttonModifyPlugin}" />
                 </div>
             </fieldset>
