--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/sidebar.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/sidebar.html
@@ -1,11 +1,11 @@
 <#macro sidebar step >
-<ul class="unstyled hidden-phone">
-    <li class="btn btn-block <#if step=="creation"> btn-primary </#if>disabled" ><h5>#i18n{pluginwizard.pluginwizard_create_application.labelCreationStep}</h5></li>
-    <li class="btn btn-block <#if step=="description"> btn-primary </#if>disabled" ><h5>#i18n{pluginwizard.pluginwizard_create_application.labelDescriptionStep}</h5></li>
-    <li class="btn btn-block <#if step=="model"> btn-primary </#if>disabled" ><h5>#i18n{pluginwizard.pluginwizard_create_application.labelBusinessStep}</h5></li>
-    <li class="btn btn-block <#if step=="administration"> btn-primary </#if>disabled" ><h5>#i18n{pluginwizard.pluginwizard_create_application.labelFeaturesStep}</h5></li>
-    <li class="btn btn-block <#if step=="xpage"> btn-primary </#if>disabled" ><h5>#i18n{pluginwizard.pluginwizard_create_application.labelXPageStep}</h5></li>
-    <li class="btn btn-block <#if step=="portlet"> btn-primary </#if>disabled" ><h5>#i18n{pluginwizard.pluginwizard_create_application.labelPortletsStep}</h5></li>
-    <li class="btn btn-block <#if step=="generate"> btn-primary </#if>disabled" ><h5>#i18n{pluginwizard.pluginwizard_create_application.labelGenerateStep}</h5></li>       
-</ul> 
+<ul class="list-unstyled hidden-phone">
+    <li class="btn btn-sm btn-block <#if step=="creation"> btn-primary <#else>btn-default</#if> disabled" ><h5>#i18n{pluginwizard.pluginwizard_create_application.labelCreationStep}</h5></li>
+    <li class="btn btn-sm btn-block <#if step=="description"> btn-primary <#else>btn-default</#if> disabled" ><h5>#i18n{pluginwizard.pluginwizard_create_application.labelDescriptionStep}</h5></li>
+    <li class="btn btn-sm btn-block <#if step=="model"> btn-primary <#else>btn-default</#if> disabled" ><h5>#i18n{pluginwizard.pluginwizard_create_application.labelBusinessStep}</h5></li>
+    <li class="btn btn-sm btn-block <#if step=="administration"> btn-primary <#else>btn-default</#if> disabled" ><h5>#i18n{pluginwizard.pluginwizard_create_application.labelFeaturesStep}</h5></li>
+    <li class="btn btn-sm btn-block <#if step=="xpage"> btn-primary <#else>btn-default</#if> disabled" ><h5>#i18n{pluginwizard.pluginwizard_create_application.labelXPageStep}</h5></li>
+    <li class="btn btn-sm btn-block <#if step=="portlet"> btn-primary <#else>btn-default</#if> disabled" ><h5>#i18n{pluginwizard.pluginwizard_create_application.labelPortletsStep}</h5></li>
+    <li class="btn btn-sm btn-block <#if step=="generate"> btn-primary <#else>btn-default</#if> disabled" ><h5>#i18n{pluginwizard.pluginwizard_create_application.labelGenerateStep}</h5></li>       
+</ul>
 </#macro>
